# shopkeeper-agent

./: .env.example  LICENSE  README.md  pyproject.toml
app/agent/: graph.py  llm.py  state.py
app/agent/nodes/: extract_keywords.py  run_sql.py  validate_sql.py
app/clients/: mysql_client_manager.py
app/services/: meta_knowledge_service.py
conf/: app_config.yaml
docker/: docker-compose.yaml
docker/mysql/: dw.sql  meta.sql
frontend/: .gitignore  index.html  tailwind.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Composer.tsx  EmptyState.tsx  MessageBubble.tsx  ResultTable.tsx  StepRail.tsx
